--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,6 +6,11 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello</h1>
+<div>
+    <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out">
+    </form>
+</div>
 </body>
 </html>
